# Production_CI-CD

./: .env  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  deployment.yaml  dev-requirements.txt  docker-compose.yml  dynamic_unit_test.py  requirements.txt  rules_python  schema_creation.sql  test_smoke.py
Grafana_dockerfile/: Dockerfile.grafana
docs/: Dependency_installation  Installation  Message_protocol  TowerWatch_Architecture.drawio  architecture.drawio  platform_configurations.txt  schema_creation.sql
frontend/: BUILD  Deplyment.yaml  Dockerfile  MODULE.build  new  package-lock.json  package.json  tst.txt
grafana/: README.md  queries.txt
heimdall/: 123  BUILD  Deployment.yaml  Dockerfile  MODULE.build  heimdall_handler.py  new  requirements.txt  tsst.txt
influxdb_dockerfile/: Dockerfile.influxdb
influxdb_ingestor/: .env  BUILD  Deployment.yaml  Dockerfile  MODULE.build  TW_influxdb_client.py  new  requirements.txt  tst.txt
jarvis/: BUILD  Deployment.yaml  Dockerfile  MODULE.build  etl_handler.py  new  requirements.txt  tst.txt
manifests/: heimdall-deployment.yml  influxdb-ingestor-deployment.yml  jarvis-deployment.yml  mqtt-deployment.yml  mysql-ingestor-deployment.yml
mqtt/: .env  BUILD  Deployment.yaml  Dockerfile  MODULE.build  mqtt_sub.py  new  requirements.txt  tst.txt  vault_fetcher.py
mysql_ingestor/: .env  .flaskenv  BUILD  Deployment.yaml  Dockerfile  MODULE.build  config.py  new  requirements.txt  run.py  set_port.sh  tst.txt
mysql_ingestor_archive/: db_queries.py  mysql_client.py
package_creator/: LICENSE  README.md  (+2 more)
(+132 files in other folders)
