module(
    name = "my_project",
    version = "1.0.0",
)

# Declare dependencies if needed
bazel_dep(name = "rules_python", version = "0.22.0")
bazel_dep(name = "rules_nodejs", version = "6.0.0")

# Use local path overrides for project modules
local_path_override(module_name = "frontend", path = "./frontend")
local_path_override(module_name = "mysql_ingestor", path = "./mysql_ingestor")
local_path_override(module_name = "mqtt", path = "./mqtt")
local_path_override(module_name = "jarvis", path = "./jarvis")
local_path_override(module_name = "heimdall", path = "./heimdall")
local_path_override(module_name = "influxdb_ingestor", path = "./influxdb_ingestor")
